# NarraTer

./: .gitignore  PLANO_FRONTEND.md  PLANO_MCP.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
docs/: mcp-canvas-tools.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: canvas_bridge.rs  fsops.rs  historia.rs  ipc.rs  lib.rs  main.rs  pty.rs  roles.rs  scene.rs
src/components/AgentNoteEdge/: index.tsx
src/components/AgentPicker/: index.tsx
src/components/AgentPipeEdge/: index.tsx
src/components/AttachmentTile/: index.tsx
src/components/Canvas/: index.tsx
src/components/CommandPalette/: index.tsx
src/components/EdgeHistoryPanel/: index.tsx
src/components/EmptyState/: index.tsx
src/components/FileTreeTile/: index.tsx
src/components/NoteTile/: index.tsx
src/components/PortalTile/: index.tsx
src/components/RoleManager/: index.tsx
src/components/Sidebar/: index.tsx
src/components/SketchLayer/: index.tsx
src/components/TerminalTile/: index.tsx
src/components/TextTile/: index.tsx
src/components/Toaster/: index.tsx
src/components/Toolbar/: index.tsx
src/components/ui/: Badge.tsx  IconButton.tsx  Kbd.tsx
src/hooks/: useAutoSave.ts  usePty.ts
src/lib/: agentPrompt.ts  ansi.ts  canvasBridge.ts  editors.ts  ptyBus.ts  tauri.ts  terminalManager.ts
src/stores/: canvas.ts  ledger.ts  persistence.ts  roles.ts  sketch.ts  terminals.ts  toasts.ts  tool.ts  workspaces.ts
