[package]
name = "narrater"
version = "0.1.0"
description = "NarraTer — spatial terminal canvas for Linux"
authors = []
edition = "2021"
rust-version = "1.75"

[lib]
name = "narrater_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "narrater"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
